--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script type="module" src="engine/EngineCore.js"></script>
         <script type="module" src="states/main_menuState.js"></script>
     </head>
     <body>
